--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -49,7 +49,8 @@
 }
 
 .page__content {
-
+  /* The following line was added by APG */
+  text-align: justify; 
   h2 {
     padding-bottom: 0.5em;
     border-bottom: 1px solid $border-color;
