--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -32,7 +32,7 @@
         <!-- <li itemprop="homeLocation" itemscope itemtype="http://schema.org/Place"> 
 			<i class="fa fa-fw fa-map-marker" aria-hidden="true"></i> <span itemprop="name">{{ author.location }}</span>APG comment-->
 		<li>
-		  <a href="https://tb.ethz.ch/" itemprop="url">
+		  <a href="https://www.cnb.csic.es/" itemprop="url">
             <i class="fa fa-fw fa-map-marker" aria-hidden="true"></i> {{ author.location }}
           </a>
         </li>
